# codepath-cli

./: .gitignore  Cargo.toml  README.md
server/: Cargo.toml
server/src/: main.rs
server/src/router/: mod.rs
server/src/util/: mod.rs
src/: cli.rs  main.rs
src/git/: mod.rs
src/projects/: mod.rs  tutor.rs
src/setup/: linux.rs  mac.rs  mod.rs  utils.rs  windows.rs
