[package]
name = "codepath-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
serde_json = "1.0.132"
anyhow = "1.0.91"
